--- a/uk.co.nfocus.ecommerceproject/uk.co.nfocus.ecommerceproject.csproj
+++ b/uk.co.nfocus.ecommerceproject/uk.co.nfocus.ecommerceproject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,12 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Results\**" />
+    <EmbeddedResource Remove="Results\**" />
+    <None Remove="Results\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
@@ -24,10 +30,6 @@
     <PackageReference Include="NunitXml.TestLogger" Version="3.1.20" />
     <PackageReference Include="Selenium.Support" Version="4.17.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.17.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Results\" />
   </ItemGroup>
 
 </Project>
