--- a/uk.co.nfocus.ecommerceproject/uk.co.nfocus.ecommerceproject.csproj
+++ b/uk.co.nfocus.ecommerceproject/uk.co.nfocus.ecommerceproject.csproj
@@ -30,6 +30,8 @@
     <PackageReference Include="NunitXml.TestLogger" Version="3.1.20" />
     <PackageReference Include="Selenium.Support" Version="4.17.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.17.0" />
+    <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
+    <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
   </ItemGroup>
 
 </Project>
